align bugs fix

--- a/src/components/FlashcardsScreen/FlashcardsScreen.css
+++ b/src/components/FlashcardsScreen/FlashcardsScreen.css
@@ -25,18 +25,6 @@
   background-color: var(--bg-secondary);
 }
 
-.flashcard-item {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px solid var(--grey-primary);
-  padding: 12px 0;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  border-radius: 5px;
-  transition: transform 0.3s ease;
-}
-
 .flashcard-item:hover .delete-btn {
   visibility: visible;
   opacity: 1;
@@ -47,7 +35,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
-  padding: 10px 15px;
+  padding: 10px 0;
   cursor: pointer;
   position: relative;
   z-index: 1;
@@ -87,24 +75,6 @@
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  border-radius: 5px;
-}
-
-.flashcard-item:hover .delete-btn {
-  visibility: visible;
-  opacity: 1;
-}
-
-.flashcard-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-grow: 1;
-  padding: 10px 15px;
-  cursor: pointer;
-  position: relative;
-  z-index: 1;
-  background-color: white;
 }
 
 .flashcard-meaning {
