--- a/src/components/TopicsScreen/TopicsScreen.css
+++ b/src/components/TopicsScreen/TopicsScreen.css
@@ -32,7 +32,6 @@
   justify-content: space-between;
   padding: 10px 0;
   overflow: hidden;
-  border-radius: 5px;
   border-bottom: 1px solid var(--grey-primary);
 }
 
@@ -46,7 +45,7 @@
   align-items: center;
   justify-content: space-between;
   flex-grow: 1;
-  padding: 10px 15px;
+  padding: 10px 0;
   cursor: pointer;
   position: relative;
   z-index: 1;
